<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MentalMathX</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnNewGame">Neues Spiel</string>
    <string name="btnHighScore">High Scores</string>
    <string name="btnEasy">Leicht</string>
    <string name="btnMedium">Mittel</string>
    <string name="btnHard">Schwer</string>
    <string name="txtVwSummary">%s Zusammenfassung</string>
    <string name="txtVwTime">Zeit:</string>
    <string name="txtVwCorrectGuesses">Richtig gelöst:</string>
    <string name="txtVwWrongGuesses">Falsch gerechnet:</string>
    <string name="btnOK">OK</string>
    <string name="btnMarathon">Marathon</string>
    <string name="btnHoundredRoundes">100 Runden</string>
    <string name="btnTenRoundes">10 Runden</string>
    <string name="title_activity_highscores">HighscoresActivity</string>
    <string name="txtVwLoadingDB">Lade Daten</string>
    <string name="txtVwCorrectHeader">Richtig</string>
    <string name="txtVwWrongHeader">Falsch</string>
    <string name="txtVwTimeHeader">Dauer</string>
    <string name="txtVwSelectDifficulty">Schwierigkeit?</string>
    <string name="txtVwSelectMode">Welcher Modus?</string>
    <string name="txtVwAboutHeader">About...</string>
    <string name="txtVwAboutApp">Diese App ist Free Software und wurde unter der GPLv3 veröffentlicht. Der Quelltext ist frei auf https://github.com/schlingel/MentalMathX verfügbar. Falls sie für diese App etwas gezahlt haben, fordern Sie das Geld zurück und laden Sie die freie Variante herunter.</string>
    <string name="txtVwAboutIcon">Das App-Icon stammt von Freepik (http://www.freepik.com) und steht unter der CC-BY 3.0. Veröffentlicht wurde es von http://www.flaticon.com.</string>
    <string name="btnAbout">About</string>
    <string name="btnVeryEasy">Einmaleins</string>

</resources>
