<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGameActivity">

    <TextView
        android:id="@+id/txtVwSelectMode"
        android:textColor="@color/Light"
        android:textSize="18dp"
        android:background="@color/VeryDark"
        android:text="@string/txtVwSelectMode"
        android:padding="12dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_below="@id/txtVwSelectMode"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="@style/MentalButton"
            android:id="@+id/btnTenRoundes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/btnTenRoundes"/>

        <Button
            style="@style/MentalButton"
            android:id="@+id/btnHoundredRoundes"
            android:layout_width="fill_parent"
            android:layout_margin="3dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnTenRoundes"
            android:text="@string/btnHoundredRoundes"/>

        <Button
            style="@style/MentalButton"
            android:id="@+id/btnMarathon"
            android:layout_width="fill_parent"
            android:layout_margin="3dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnHoundredRoundes"
            android:text="@string/btnMarathon" />

        <Button
            style="@style/MentalButton"
            android:id="@+id/btnHighscore"
            android:layout_margin="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnAbout"
            android:text="@string/btnHighScore"/>

        <Button
            style="@style/MentalButton"
            android:id="@id/btnAbout"
            android:layout_margin="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/btnAbout"/>


        </RelativeLayout>


</RelativeLayout>
