<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/btnEasy"
        style="@style/MentalButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEasy"/>

    <Button
        android:id="@+id/btnMedium"
        style="@style/MentalButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnEasy"
        android:text="@string/btnMedium"/>

    <Button
        android:id="@+id/btnHard"
        style="@style/MentalButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnMedium"
        android:text="@string/btnHard"/>

</RelativeLayout>