<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/Light"
        android:background="@color/VeryDark"
        android:text="@string/txtVwAboutHeader"
        android:textSize="16dp"
        android:gravity="center"
        android:padding="12dp"
        android:linksClickable="true"
        android:autoLink="web"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/VeryDark"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@color/VeryLight"
        android:linksClickable="true"
        android:autoLink="web"
        android:text="@string/txtVwAboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/VeryDark"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@color/VeryLight"
        android:text="@string/txtVwAboutIcon"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:textColor="@color/VeryDark"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@color/VeryLight"
        android:text="© Martin Keiblinger 2014"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>